# shadobeam

./: Cargo.toml  LICENSE  README.md
beacon/: Cargo.toml  build.rs
beacon/src/: beacon.rs  implant.rs  interface.rs  main.rs  task.rs  utils.rs
implant/: Cargo.toml  build.rs
implant/src/: implant.rs  main.rs
interface/: Cargo.toml  build.rs
interface/src/: interface.rs  main.rs  tui.rs  ui.rs  utils.rs
interface/src/tui/: action.rs  app.rs  event.rs  message.rs  mod.rs  stateful_list.rs  utils.rs
interface/src/tui/app/: component.rs  modal.rs
interface/src/tui/components/: actions.rs  base.rs  clients.rs  console.rs  implants.rs  input.rs  mod.rs  other.rs  output.rs  pane.rs
interface/src/ui/: app.rs  modal.rs  panes.rs  stateful_list.rs
proto/: Cargo.toml  build.rs  common.proto  iface.proto  interface.proto  tasks.proto
proto/src/: lib.rs  utils.rs
shadobeam_client/: Cargo.toml
shadobeam_server/: Cargo.toml
