[package]
name = "shadobeam_beacon"
version = "0.1.0"
edition = "2021"

[dependencies]
shadobeam_proto = { version = "0.1.0", path = "../proto/" }

anyhow = "1.0.75"

tonic = "0.10.2"
prost = "0.12.1"

tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures-core = "0.3.28"
futures-util = "0.3.28"
async-stream = "0.3.5"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
