[package]
name = "shadobeam_implant"
version = "0.1.0"
edition = "2021"

[dependencies]
shadobeam_proto = { version = "0.1.0", path = "../proto/" }

anyhow = "1.0.75"
rand = "0.8.5"
uuid = "1.4.1"

tonic = "0.10"
prost = "0.12"

async-stream = "0.3.5"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "process"] }
