[package]
name = "shadobeam_interface"
version = "0.1.0"
edition = "2021"

[dependencies]
shadobeam_proto = { version = "0.1.0", path = "../proto/" }

anyhow = "1.0.71"
better-panic = "0.3.0"

clap = { version = "4.3.4", default-features = false, features = [
  "std",
  "color",
  "help",
  "usage",
  "error-context",
  "suggestions",
  "derive",
  "cargo",
  "wrap_help",
  "unicode",
  "string",
  "unstable-styles",
] }
clap_complete = "4.3.1"
directories = "5.0.1"
strum = "0.25.0"
strum_macros = "0.25.0"

crossterm = { version = "0.27.0", default-features = false, features = [
  "event-stream",
] }
ratatui = { version = "0.23.0", features = ["all-widgets"]}
tui-input = "0.8.0"

log4rs = { version = "1.2.0", features = [
  "rolling_file_appender", "fixed_window_roller", "compound_policy", "size_trigger", "gzip"
] }
log = "0.4.20"
colored = "2.0.4"

prost = "0.12"
tonic = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
tokio-util = "0.7.8"
futures = "0.3.28"
signal-hook = "0.3.15"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
